WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
242041
[iOS] Selection highlight is not visible after right clicking non-editable text for the first time
https://bugs.webkit.org/show_bug.cgi?id=242041
Summary
[iOS] Selection highlight is not visible after right clicking non-editable te...
Wenson Hsieh
Reported
2022-06-27 17:21:55 PDT
rdar://95810910
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2022-06-27 18:31:19 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/1839
EWS
Comment 2
2022-06-27 20:52:48 PDT
Committed
251901@main
(b90ad693d459): <
https://commits.webkit.org/251901@main
> Reviewed commits have been landed. Closing PR #1839 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug